trying again to make a change

--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 	<title>Hello Coursera</title>
+	h1 {
+	font-color: blue; 
+	background-color: #000000;
+	}
 </head>
 <body>
 <h1>OK SO IT IS WORKING? Take two: I said, Hello Coursera! It is a great course. </h1>
 <h2>It is fun to be able to see this stuff on the web! ! ! </h2>
 <h3> wow this is convenient </h3>
+<h4>If I can see heading 4 then my changes have worked </h4>
 </body>
 </html>
